--- a/public/components/layout.module.css
+++ b/public/components/layout.module.css
@@ -1,25 +1,16 @@
 .container {
-  max-width: 36rem;
   padding: 0 1rem;
   margin: 3rem auto 6rem;
-}
-
-.header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: cursive;
 }
-
-.headerImage {
-  width: 6rem;
-  height: 6rem;
+.paragraflink {
+  font-family: monospace;
 }
 
 .headerHomeImage {
-  width: 8rem;
-  height: 8rem;
-}
-
-.backToHome {
-  margin: 3rem 0 0;
+  width: 10rem;
+  height: 10rem;
 }
